semantic_done (2)/quick.output
Terminals unused in grammar

   BOOL
   INT
   CHAR
   HEY
   ASD
   TRUE
   FALSE
   COMMA
   OB


Grammar

    0 $accept: program $end

    1 program: function_declaration main_function

    2 header_by_user: header_by_user INCLUDE STRING H N
    3               | %empty
    4               | error

    5 macro_statement: macro_statement MACRO STRING STRING N
    6                | macro_statement MACRO STRING VALUE N
    7                | header_by_user

    8 function_declaration: function_declaration function_name '(' function_arguments ')' '{' function_statements RETURN return_type N '}'
    9                     | function_declaration data_type STRING N
   10                     | function_declaration data_type STRING '[' VALUE ']' N
   11                     | macro_statement

   12 function_name: data_type STRING

   13 function_arguments: data_type STRING
   14                   | function_arguments ',' data_type STRING
   15                   | data_type POINTER STRING
   16                   | function_arguments ',' data_type POINTER STRING
   17                   | data_type STRING '[' VALUE ']'
   18                   | function_arguments ',' data_type STRING '[' VALUE ']'
   19                   | %empty
   20                   | error

   21 return_type: variable_or_value_or_function_call
   22            | error

   23 data_type: DATA_TYPE_INT
   24          | DATA_TYPE_STRING

   25 main_function: MAIN '{' function_statements '}'
   26              | MAIN error

   27 function_statements: function_statements RETURN return_type N
   28                    | function_statements declaration_statement N
   29                    | function_statements assignment_statement N
   30                    | function_statements input_output_statement
   31                    | function_statements function_calling_newline
   32                    | function_statements conditional_statement
   33                    | function_statements loop_statement
   34                    | function_statements array_statement N
   35                    | %empty

   36 array_statement: data_type array_declaration_recursive
   37                | array_initialisation
   38                | error

   39 array_declaration_recursive: STRING '[' expression ']'
   40                            | array_declaration_recursive ',' STRING '[' expression ']'

   41 array_initialisation: STRING '[' expression ']' '=' expression

   42 loop_statement: FOR '(' loop_initialisation N loop_condition N loop_update ')' '{' loop_content '}'

   43 loop_initialisation: declaration_statement
   44                    | assignment_statement
   45                    | %empty
   46                    | error

   47 loop_condition: if_expression
   48               | loop_condition ',' if_expression
   49               | %empty
   50               | error

   51 loop_update: assignment_statement
   52            | loop_update ',' assignment_statement
   53            | %empty
   54            | error

   55 loop_content: function_statements

   56 conditional_statement: IF '(' if_expression ')' '{' inside_content '}'
   57                      | IF '(' if_expression ')' '{' inside_content '}' ELSE '{' inside_content '}'
   58                      | error

   59 if_expression: inside_if_expression
   60              | inside_if_expression AND_AND inside_if_expression
   61              | inside_if_expression OR_OR inside_if_expression
   62              | '(' inside_if_expression CB

   63 inside_if_expression: expression EQUAL_EQUAL expression
   64                     | expression NOT_EQUAL expression
   65                     | expression LESS_THAN_EQUAL expression
   66                     | expression GREATER_THAN_EQUAL expression
   67                     | expression '<' expression
   68                     | expression '>' expression
   69                     | '!' expression
   70                     | expression

   71 inside_content: function_statements

   72 function_calling_newline: STRING '(' function_call_variables ')' N
   73                         | STRING '=' STRING '(' function_call_variables ')' ';'

   74 input_output_statement: QUICKIN FORWARD remaining_statement_in N
   75                       | QUICKOUT BACKWARD remaining_statement_out N

   76 remaining_statement_in: STRING
   77                       | remaining_statement_in FORWARD STRING

   78 remaining_statement_out: expression
   79                        | remaining_statement_out BACKWARD expression
   80                        | '#' quote '#'
   81                        | remaining_statement_out BACKWARD '#' quote '#'

   82 quote: quote STRING
   83      | quote VALUE
   84      | quote '~'
   85      | quote '`'
   86      | quote '@'
   87      | quote '$'
   88      | quote '^'
   89      | quote ':'
   90      | quote '.'
   91      | quote '?'
   92      | quote '!'
   93      | quote '&'
   94      | quote '*'
   95      | quote '('
   96      | quote ')'
   97      | quote '-'
   98      | quote '='
   99      | quote '+'
  100      | quote '{'
  101      | quote '}'
  102      | quote ';'
  103      | quote '/'
  104      | quote '>'
  105      | quote '<'
  106      | quote ','
  107      | quote PLUS_PLUS
  108      | quote MINUS_MINUS
  109      | quote FORWARD
  110      | quote BACKWARD
  111      | %empty

  112 assignment_statement: STRING '=' expression
  113                     | increment_operator
  114                     | STRING '=' '#' quote '#'
  115                     | STRING '=' NULL1

  116 increment_operator: STRING PLUS_PLUS
  117                   | STRING MINUS_MINUS

  118 declaration_statement: data_type declaration_expression

  119 declaration_expression: STRING
  120                       | declaration_expression ',' STRING
  121                       | declaration_assignment_expression
  122                       | declaration_expression ',' declaration_assignment_expression

  123 declaration_assignment_expression: STRING '=' expression
  124                                  | STRING '=' '#' quote '#'

  125 expression: variable_or_value_or_function_call
  126           | expression '/' expression
  127           | expression '*' expression
  128           | expression '+' expression
  129           | expression '-' expression
  130           | '(' expression ')'

  131 variable_or_value_or_function_call: STRING
  132                                   | STRING '[' VALUE ']'
  133                                   | STRING '[' STRING ']'
  134                                   | VALUE
  135                                   | STRING '(' function_call_variables ')'

  136 function_call_variables: expression
  137                        | function_call_variables ',' expression
  138                        | POINTER STRING
  139                        | function_call_variables ',' POINTER STRING
  140                        | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 69 92
'#' (35) 80 81 114 124
'$' (36) 87
'&' (38) 93
'(' (40) 8 42 56 57 62 72 73 95 130 135
')' (41) 8 42 56 57 72 73 96 130 135
'*' (42) 94 127
'+' (43) 99 128
',' (44) 14 16 18 40 48 52 106 120 122 137 139
'-' (45) 97 129
'.' (46) 90
'/' (47) 103 126
':' (58) 89
';' (59) 73 102
'<' (60) 67 105
'=' (61) 41 73 98 112 114 115 123 124
'>' (62) 68 104
'?' (63) 91
'@' (64) 86
'[' (91) 10 17 18 39 40 41 132 133
']' (93) 10 17 18 39 40 41 132 133
'^' (94) 88
'`' (96) 85
'{' (123) 8 25 42 56 57 100
'}' (125) 8 25 42 56 57 101
'~' (126) 84
error (256) 4 20 22 26 38 46 50 54 58
MACRO (258) 5 6
BOOL (259)
INT (260)
CHAR (261)
PLUS_PLUS (262) 107 116
MINUS_MINUS (263) 108 117
NULL1 (264) 115
FORWARD (265) 74 77 109
BACKWARD (266) 75 79 81 110
HEY (267)
IF (268) 56 57
ELSE (269) 57
FOR (270) 42
ASD (271)
EQUAL_EQUAL (272) 63
NOT_EQUAL (273) 64
LESS_THAN_EQUAL (274) 65
GREATER_THAN_EQUAL (275) 66
TRUE (276)
FALSE (277)
RETURN (278) 8 27
AND_AND (279) 60
OR_OR (280) 61
COMMA (281)
QUICKIN (282) 74
QUICKOUT (283) 75
MAIN (284) 25 26
H (285) 2
N (286) 2 5 6 8 9 10 27 28 29 34 42 72 74 75
POINTER (287) 15 16 138 139
STRING (288) 2 5 6 9 10 12 13 14 15 16 17 18 39 40 41 72 73 76 77 82
    112 114 115 116 117 119 120 123 124 131 132 133 135 138 139
INCLUDE (289) 2
VALUE (290) 6 10 17 18 83 132 134
DATA_TYPE_INT (291) 23
DATA_TYPE_STRING (292) 24
CB (293) 62
OB (294)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
program (67)
    on left: 1, on right: 0
header_by_user (68)
    on left: 2 3 4, on right: 2 7
macro_statement (69)
    on left: 5 6 7, on right: 5 6 11
function_declaration (70)
    on left: 8 9 10 11, on right: 1 8 9 10
function_name (71)
    on left: 12, on right: 8
function_arguments (72)
    on left: 13 14 15 16 17 18 19 20, on right: 8 14 16 18
return_type (73)
    on left: 21 22, on right: 8 27
data_type (74)
    on left: 23 24, on right: 9 10 12 13 14 15 16 17 18 36 118
main_function (75)
    on left: 25 26, on right: 1
function_statements (76)
    on left: 27 28 29 30 31 32 33 34 35, on right: 8 25 27 28 29 30
    31 32 33 34 55 71
array_statement (77)
    on left: 36 37 38, on right: 34
array_declaration_recursive (78)
    on left: 39 40, on right: 36 40
array_initialisation (79)
    on left: 41, on right: 37
loop_statement (80)
    on left: 42, on right: 33
loop_initialisation (81)
    on left: 43 44 45 46, on right: 42
loop_condition (82)
    on left: 47 48 49 50, on right: 42 48
loop_update (83)
    on left: 51 52 53 54, on right: 42 52
loop_content (84)
    on left: 55, on right: 42
conditional_statement (85)
    on left: 56 57 58, on right: 32
if_expression (86)
    on left: 59 60 61 62, on right: 47 48 56 57
inside_if_expression (87)
    on left: 63 64 65 66 67 68 69 70, on right: 59 60 61 62
inside_content (88)
    on left: 71, on right: 56 57
function_calling_newline (89)
    on left: 72 73, on right: 31
input_output_statement (90)
    on left: 74 75, on right: 30
remaining_statement_in (91)
    on left: 76 77, on right: 74 77
remaining_statement_out (92)
    on left: 78 79 80 81, on right: 75 79 81
quote (93)
    on left: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111, on right: 80 81
    82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 110 114 124
assignment_statement (94)
    on left: 112 113 114 115, on right: 29 44 51 52
increment_operator (95)
    on left: 116 117, on right: 113
declaration_statement (96)
    on left: 118, on right: 28 43
declaration_expression (97)
    on left: 119 120 121 122, on right: 118 120 122
declaration_assignment_expression (98)
    on left: 123 124, on right: 121 122
expression (99)
    on left: 125 126 127 128 129 130, on right: 39 40 41 63 64 65 66
    67 68 69 70 78 79 112 123 126 127 128 129 130 136 137
variable_or_value_or_function_call (100)
    on left: 131 132 133 134 135, on right: 21 125
function_call_variables (101)
    on left: 136 137 138 139 140, on right: 72 73 135 137 139


State 0

    0 $accept: . program $end

    error  shift, and go to state 1

    MACRO             reduce using rule 3 (header_by_user)
    MAIN              reduce using rule 3 (header_by_user)
    INCLUDE           reduce using rule 3 (header_by_user)
    DATA_TYPE_INT     reduce using rule 3 (header_by_user)
    DATA_TYPE_STRING  reduce using rule 3 (header_by_user)

    program               go to state 2
    header_by_user        go to state 3
    macro_statement       go to state 4
    function_declaration  go to state 5


State 1

    4 header_by_user: error .

    $default  reduce using rule 4 (header_by_user)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    2 header_by_user: header_by_user . INCLUDE STRING H N
    7 macro_statement: header_by_user .

    INCLUDE  shift, and go to state 7

    $default  reduce using rule 7 (macro_statement)


State 4

    5 macro_statement: macro_statement . MACRO STRING STRING N
    6                | macro_statement . MACRO STRING VALUE N
   11 function_declaration: macro_statement .

    MACRO  shift, and go to state 8

    $default  reduce using rule 11 (function_declaration)


State 5

    1 program: function_declaration . main_function
    8 function_declaration: function_declaration . function_name '(' function_arguments ')' '{' function_statements RETURN return_type N '}'
    9                     | function_declaration . data_type STRING N
   10                     | function_declaration . data_type STRING '[' VALUE ']' N

    MAIN              shift, and go to state 9
    DATA_TYPE_INT     shift, and go to state 10
    DATA_TYPE_STRING  shift, and go to state 11

    function_name  go to state 12
    data_type      go to state 13
    main_function  go to state 14


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 header_by_user: header_by_user INCLUDE . STRING H N

    STRING  shift, and go to state 15


State 8

    5 macro_statement: macro_statement MACRO . STRING STRING N
    6                | macro_statement MACRO . STRING VALUE N

    STRING  shift, and go to state 16


State 9

   25 main_function: MAIN . '{' function_statements '}'
   26              | MAIN . error

    error  shift, and go to state 17
    '{'    shift, and go to state 18


State 10

   23 data_type: DATA_TYPE_INT .

    $default  reduce using rule 23 (data_type)


State 11

   24 data_type: DATA_TYPE_STRING .

    $default  reduce using rule 24 (data_type)


State 12

    8 function_declaration: function_declaration function_name . '(' function_arguments ')' '{' function_statements RETURN return_type N '}'

    '('  shift, and go to state 19


State 13

    9 function_declaration: function_declaration data_type . STRING N
   10                     | function_declaration data_type . STRING '[' VALUE ']' N
   12 function_name: data_type . STRING

    STRING  shift, and go to state 20


State 14

    1 program: function_declaration main_function .

    $default  reduce using rule 1 (program)


State 15

    2 header_by_user: header_by_user INCLUDE STRING . H N

    H  shift, and go to state 21


State 16

    5 macro_statement: macro_statement MACRO STRING . STRING N
    6                | macro_statement MACRO STRING . VALUE N

    STRING  shift, and go to state 22
    VALUE   shift, and go to state 23


State 17

   26 main_function: MAIN error .

    $default  reduce using rule 26 (main_function)


State 18

   25 main_function: MAIN '{' . function_statements '}'

    $default  reduce using rule 35 (function_statements)

    function_statements  go to state 24


State 19

    8 function_declaration: function_declaration function_name '(' . function_arguments ')' '{' function_statements RETURN return_type N '}'

    error             shift, and go to state 25
    DATA_TYPE_INT     shift, and go to state 10
    DATA_TYPE_STRING  shift, and go to state 11

    ')'  reduce using rule 19 (function_arguments)
    ','  reduce using rule 19 (function_arguments)

    function_arguments  go to state 26
    data_type           go to state 27


State 20

    9 function_declaration: function_declaration data_type STRING . N
   10                     | function_declaration data_type STRING . '[' VALUE ']' N
   12 function_name: data_type STRING .

    N    shift, and go to state 28
    '['  shift, and go to state 29

    $default  reduce using rule 12 (function_name)


State 21

    2 header_by_user: header_by_user INCLUDE STRING H . N

    N  shift, and go to state 30


State 22

    5 macro_statement: macro_statement MACRO STRING STRING . N

    N  shift, and go to state 31


State 23

    6 macro_statement: macro_statement MACRO STRING VALUE . N

    N  shift, and go to state 32


State 24

   25 main_function: MAIN '{' function_statements . '}'
   27 function_statements: function_statements . RETURN return_type N
   28                    | function_statements . declaration_statement N
   29                    | function_statements . assignment_statement N
   30                    | function_statements . input_output_statement
   31                    | function_statements . function_calling_newline
   32                    | function_statements . conditional_statement
   33                    | function_statements . loop_statement
   34                    | function_statements . array_statement N

    error             shift, and go to state 33
    IF                shift, and go to state 34
    FOR               shift, and go to state 35
    RETURN            shift, and go to state 36
    QUICKIN           shift, and go to state 37
    QUICKOUT          shift, and go to state 38
    STRING            shift, and go to state 39
    DATA_TYPE_INT     shift, and go to state 10
    DATA_TYPE_STRING  shift, and go to state 11
    '}'               shift, and go to state 40

    data_type                 go to state 41
    array_statement           go to state 42
    array_initialisation      go to state 43
    loop_statement            go to state 44
    conditional_statement     go to state 45
    function_calling_newline  go to state 46
    input_output_statement    go to state 47
    assignment_statement      go to state 48
    increment_operator        go to state 49
    declaration_statement     go to state 50


State 25

   20 function_arguments: error .

    $default  reduce using rule 20 (function_arguments)


State 26

    8 function_declaration: function_declaration function_name '(' function_arguments . ')' '{' function_statements RETURN return_type N '}'
   14 function_arguments: function_arguments . ',' data_type STRING
   16                   | function_arguments . ',' data_type POINTER STRING
   18                   | function_arguments . ',' data_type STRING '[' VALUE ']'

    ')'  shift, and go to state 51
    ','  shift, and go to state 52


State 27

   13 function_arguments: data_type . STRING
   15                   | data_type . POINTER STRING
   17                   | data_type . STRING '[' VALUE ']'

    POINTER  shift, and go to state 53
    STRING   shift, and go to state 54


State 28

    9 function_declaration: function_declaration data_type STRING N .

    $default  reduce using rule 9 (function_declaration)


State 29

   10 function_declaration: function_declaration data_type STRING '[' . VALUE ']' N

    VALUE  shift, and go to state 55


State 30

    2 header_by_user: header_by_user INCLUDE STRING H N .

    $default  reduce using rule 2 (header_by_user)


State 31

    5 macro_statement: macro_statement MACRO STRING STRING N .

    $default  reduce using rule 5 (macro_statement)


State 32

    6 macro_statement: macro_statement MACRO STRING VALUE N .

    $default  reduce using rule 6 (macro_statement)


State 33

   38 array_statement: error .
   58 conditional_statement: error .

    N         reduce using rule 38 (array_statement)
    $default  reduce using rule 58 (conditional_statement)


State 34

   56 conditional_statement: IF . '(' if_expression ')' '{' inside_content '}'
   57                      | IF . '(' if_expression ')' '{' inside_content '}' ELSE '{' inside_content '}'

    '('  shift, and go to state 56


State 35

   42 loop_statement: FOR . '(' loop_initialisation N loop_condition N loop_update ')' '{' loop_content '}'

    '('  shift, and go to state 57


State 36

   27 function_statements: function_statements RETURN . return_type N

    error   shift, and go to state 58
    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60

    return_type                         go to state 61
    variable_or_value_or_function_call  go to state 62


State 37

   74 input_output_statement: QUICKIN . FORWARD remaining_statement_in N

    FORWARD  shift, and go to state 63


State 38

   75 input_output_statement: QUICKOUT . BACKWARD remaining_statement_out N

    BACKWARD  shift, and go to state 64


State 39

   41 array_initialisation: STRING . '[' expression ']' '=' expression
   72 function_calling_newline: STRING . '(' function_call_variables ')' N
   73                         | STRING . '=' STRING '(' function_call_variables ')' ';'
  112 assignment_statement: STRING . '=' expression
  114                     | STRING . '=' '#' quote '#'
  115                     | STRING . '=' NULL1
  116 increment_operator: STRING . PLUS_PLUS
  117                   | STRING . MINUS_MINUS

    PLUS_PLUS    shift, and go to state 65
    MINUS_MINUS  shift, and go to state 66
    '('          shift, and go to state 67
    '['          shift, and go to state 68
    '='          shift, and go to state 69


State 40

   25 main_function: MAIN '{' function_statements '}' .

    $default  reduce using rule 25 (main_function)


State 41

   36 array_statement: data_type . array_declaration_recursive
  118 declaration_statement: data_type . declaration_expression

    STRING  shift, and go to state 70

    array_declaration_recursive        go to state 71
    declaration_expression             go to state 72
    declaration_assignment_expression  go to state 73


State 42

   34 function_statements: function_statements array_statement . N

    N  shift, and go to state 74


State 43

   37 array_statement: array_initialisation .

    $default  reduce using rule 37 (array_statement)


State 44

   33 function_statements: function_statements loop_statement .

    $default  reduce using rule 33 (function_statements)


State 45

   32 function_statements: function_statements conditional_statement .

    $default  reduce using rule 32 (function_statements)


State 46

   31 function_statements: function_statements function_calling_newline .

    $default  reduce using rule 31 (function_statements)


State 47

   30 function_statements: function_statements input_output_statement .

    $default  reduce using rule 30 (function_statements)


State 48

   29 function_statements: function_statements assignment_statement . N

    N  shift, and go to state 75


State 49

  113 assignment_statement: increment_operator .

    $default  reduce using rule 113 (assignment_statement)


State 50

   28 function_statements: function_statements declaration_statement . N

    N  shift, and go to state 76


State 51

    8 function_declaration: function_declaration function_name '(' function_arguments ')' . '{' function_statements RETURN return_type N '}'

    '{'  shift, and go to state 77


State 52

   14 function_arguments: function_arguments ',' . data_type STRING
   16                   | function_arguments ',' . data_type POINTER STRING
   18                   | function_arguments ',' . data_type STRING '[' VALUE ']'

    DATA_TYPE_INT     shift, and go to state 10
    DATA_TYPE_STRING  shift, and go to state 11

    data_type  go to state 78


State 53

   15 function_arguments: data_type POINTER . STRING

    STRING  shift, and go to state 79


State 54

   13 function_arguments: data_type STRING .
   17                   | data_type STRING . '[' VALUE ']'

    '['  shift, and go to state 80

    $default  reduce using rule 13 (function_arguments)


State 55

   10 function_declaration: function_declaration data_type STRING '[' VALUE . ']' N

    ']'  shift, and go to state 81


State 56

   56 conditional_statement: IF '(' . if_expression ')' '{' inside_content '}'
   57                      | IF '(' . if_expression ')' '{' inside_content '}' ELSE '{' inside_content '}'

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 82
    '!'     shift, and go to state 83

    if_expression                       go to state 84
    inside_if_expression                go to state 85
    expression                          go to state 86
    variable_or_value_or_function_call  go to state 87


State 57

   42 loop_statement: FOR '(' . loop_initialisation N loop_condition N loop_update ')' '{' loop_content '}'

    error             shift, and go to state 88
    STRING            shift, and go to state 89
    DATA_TYPE_INT     shift, and go to state 10
    DATA_TYPE_STRING  shift, and go to state 11

    N  reduce using rule 45 (loop_initialisation)

    data_type              go to state 90
    loop_initialisation    go to state 91
    assignment_statement   go to state 92
    increment_operator     go to state 49
    declaration_statement  go to state 93


State 58

   22 return_type: error .

    $default  reduce using rule 22 (return_type)


State 59

  131 variable_or_value_or_function_call: STRING .
  132                                   | STRING . '[' VALUE ']'
  133                                   | STRING . '[' STRING ']'
  135                                   | STRING . '(' function_call_variables ')'

    '('  shift, and go to state 94
    '['  shift, and go to state 95

    $default  reduce using rule 131 (variable_or_value_or_function_call)


State 60

  134 variable_or_value_or_function_call: VALUE .

    $default  reduce using rule 134 (variable_or_value_or_function_call)


State 61

   27 function_statements: function_statements RETURN return_type . N

    N  shift, and go to state 96


State 62

   21 return_type: variable_or_value_or_function_call .

    $default  reduce using rule 21 (return_type)


State 63

   74 input_output_statement: QUICKIN FORWARD . remaining_statement_in N

    STRING  shift, and go to state 97

    remaining_statement_in  go to state 98


State 64

   75 input_output_statement: QUICKOUT BACKWARD . remaining_statement_out N

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99
    '#'     shift, and go to state 100

    remaining_statement_out             go to state 101
    expression                          go to state 102
    variable_or_value_or_function_call  go to state 87


State 65

  116 increment_operator: STRING PLUS_PLUS .

    $default  reduce using rule 116 (increment_operator)


State 66

  117 increment_operator: STRING MINUS_MINUS .

    $default  reduce using rule 117 (increment_operator)


State 67

   72 function_calling_newline: STRING '(' . function_call_variables ')' N

    POINTER  shift, and go to state 103
    STRING   shift, and go to state 59
    VALUE    shift, and go to state 60
    '('      shift, and go to state 99

    $default  reduce using rule 140 (function_call_variables)

    expression                          go to state 104
    variable_or_value_or_function_call  go to state 87
    function_call_variables             go to state 105


State 68

   41 array_initialisation: STRING '[' . expression ']' '=' expression

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99

    expression                          go to state 106
    variable_or_value_or_function_call  go to state 87


State 69

   73 function_calling_newline: STRING '=' . STRING '(' function_call_variables ')' ';'
  112 assignment_statement: STRING '=' . expression
  114                     | STRING '=' . '#' quote '#'
  115                     | STRING '=' . NULL1

    NULL1   shift, and go to state 107
    STRING  shift, and go to state 108
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99
    '#'     shift, and go to state 109

    expression                          go to state 110
    variable_or_value_or_function_call  go to state 87


State 70

   39 array_declaration_recursive: STRING . '[' expression ']'
  119 declaration_expression: STRING .
  123 declaration_assignment_expression: STRING . '=' expression
  124                                  | STRING . '=' '#' quote '#'

    '['  shift, and go to state 111
    '='  shift, and go to state 112

    $default  reduce using rule 119 (declaration_expression)


State 71

   36 array_statement: data_type array_declaration_recursive .
   40 array_declaration_recursive: array_declaration_recursive . ',' STRING '[' expression ']'

    ','  shift, and go to state 113

    $default  reduce using rule 36 (array_statement)


State 72

  118 declaration_statement: data_type declaration_expression .
  120 declaration_expression: declaration_expression . ',' STRING
  122                       | declaration_expression . ',' declaration_assignment_expression

    ','  shift, and go to state 114

    $default  reduce using rule 118 (declaration_statement)


State 73

  121 declaration_expression: declaration_assignment_expression .

    $default  reduce using rule 121 (declaration_expression)


State 74

   34 function_statements: function_statements array_statement N .

    $default  reduce using rule 34 (function_statements)


State 75

   29 function_statements: function_statements assignment_statement N .

    $default  reduce using rule 29 (function_statements)


State 76

   28 function_statements: function_statements declaration_statement N .

    $default  reduce using rule 28 (function_statements)


State 77

    8 function_declaration: function_declaration function_name '(' function_arguments ')' '{' . function_statements RETURN return_type N '}'

    $default  reduce using rule 35 (function_statements)

    function_statements  go to state 115


State 78

   14 function_arguments: function_arguments ',' data_type . STRING
   16                   | function_arguments ',' data_type . POINTER STRING
   18                   | function_arguments ',' data_type . STRING '[' VALUE ']'

    POINTER  shift, and go to state 116
    STRING   shift, and go to state 117


State 79

   15 function_arguments: data_type POINTER STRING .

    $default  reduce using rule 15 (function_arguments)


State 80

   17 function_arguments: data_type STRING '[' . VALUE ']'

    VALUE  shift, and go to state 118


State 81

   10 function_declaration: function_declaration data_type STRING '[' VALUE ']' . N

    N  shift, and go to state 119


State 82

   62 if_expression: '(' . inside_if_expression CB
  130 expression: '(' . expression ')'

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99
    '!'     shift, and go to state 83

    inside_if_expression                go to state 120
    expression                          go to state 121
    variable_or_value_or_function_call  go to state 87


State 83

   69 inside_if_expression: '!' . expression

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99

    expression                          go to state 122
    variable_or_value_or_function_call  go to state 87


State 84

   56 conditional_statement: IF '(' if_expression . ')' '{' inside_content '}'
   57                      | IF '(' if_expression . ')' '{' inside_content '}' ELSE '{' inside_content '}'

    ')'  shift, and go to state 123


State 85

   59 if_expression: inside_if_expression .
   60              | inside_if_expression . AND_AND inside_if_expression
   61              | inside_if_expression . OR_OR inside_if_expression

    AND_AND  shift, and go to state 124
    OR_OR    shift, and go to state 125

    $default  reduce using rule 59 (if_expression)


State 86

   63 inside_if_expression: expression . EQUAL_EQUAL expression
   64                     | expression . NOT_EQUAL expression
   65                     | expression . LESS_THAN_EQUAL expression
   66                     | expression . GREATER_THAN_EQUAL expression
   67                     | expression . '<' expression
   68                     | expression . '>' expression
   70                     | expression .
  126 expression: expression . '/' expression
  127           | expression . '*' expression
  128           | expression . '+' expression
  129           | expression . '-' expression

    EQUAL_EQUAL         shift, and go to state 126
    NOT_EQUAL           shift, and go to state 127
    LESS_THAN_EQUAL     shift, and go to state 128
    GREATER_THAN_EQUAL  shift, and go to state 129
    '/'                 shift, and go to state 130
    '*'                 shift, and go to state 131
    '+'                 shift, and go to state 132
    '-'                 shift, and go to state 133
    '<'                 shift, and go to state 134
    '>'                 shift, and go to state 135

    $default  reduce using rule 70 (inside_if_expression)


State 87

  125 expression: variable_or_value_or_function_call .

    $default  reduce using rule 125 (expression)


State 88

   46 loop_initialisation: error .

    $default  reduce using rule 46 (loop_initialisation)


State 89

  112 assignment_statement: STRING . '=' expression
  114                     | STRING . '=' '#' quote '#'
  115                     | STRING . '=' NULL1
  116 increment_operator: STRING . PLUS_PLUS
  117                   | STRING . MINUS_MINUS

    PLUS_PLUS    shift, and go to state 65
    MINUS_MINUS  shift, and go to state 66
    '='          shift, and go to state 136


State 90

  118 declaration_statement: data_type . declaration_expression

    STRING  shift, and go to state 137

    declaration_expression             go to state 72
    declaration_assignment_expression  go to state 73


State 91

   42 loop_statement: FOR '(' loop_initialisation . N loop_condition N loop_update ')' '{' loop_content '}'

    N  shift, and go to state 138


State 92

   44 loop_initialisation: assignment_statement .

    $default  reduce using rule 44 (loop_initialisation)


State 93

   43 loop_initialisation: declaration_statement .

    $default  reduce using rule 43 (loop_initialisation)


State 94

  135 variable_or_value_or_function_call: STRING '(' . function_call_variables ')'

    POINTER  shift, and go to state 103
    STRING   shift, and go to state 59
    VALUE    shift, and go to state 60
    '('      shift, and go to state 99

    $default  reduce using rule 140 (function_call_variables)

    expression                          go to state 104
    variable_or_value_or_function_call  go to state 87
    function_call_variables             go to state 139


State 95

  132 variable_or_value_or_function_call: STRING '[' . VALUE ']'
  133                                   | STRING '[' . STRING ']'

    STRING  shift, and go to state 140
    VALUE   shift, and go to state 141


State 96

   27 function_statements: function_statements RETURN return_type N .

    $default  reduce using rule 27 (function_statements)


State 97

   76 remaining_statement_in: STRING .

    $default  reduce using rule 76 (remaining_statement_in)


State 98

   74 input_output_statement: QUICKIN FORWARD remaining_statement_in . N
   77 remaining_statement_in: remaining_statement_in . FORWARD STRING

    FORWARD  shift, and go to state 142
    N        shift, and go to state 143


State 99

  130 expression: '(' . expression ')'

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99

    expression                          go to state 144
    variable_or_value_or_function_call  go to state 87


State 100

   80 remaining_statement_out: '#' . quote '#'

    $default  reduce using rule 111 (quote)

    quote  go to state 145


State 101

   75 input_output_statement: QUICKOUT BACKWARD remaining_statement_out . N
   79 remaining_statement_out: remaining_statement_out . BACKWARD expression
   81                        | remaining_statement_out . BACKWARD '#' quote '#'

    BACKWARD  shift, and go to state 146
    N         shift, and go to state 147


State 102

   78 remaining_statement_out: expression .
  126 expression: expression . '/' expression
  127           | expression . '*' expression
  128           | expression . '+' expression
  129           | expression . '-' expression

    '/'  shift, and go to state 130
    '*'  shift, and go to state 131
    '+'  shift, and go to state 132
    '-'  shift, and go to state 133

    $default  reduce using rule 78 (remaining_statement_out)


State 103

  138 function_call_variables: POINTER . STRING

    STRING  shift, and go to state 148


State 104

  126 expression: expression . '/' expression
  127           | expression . '*' expression
  128           | expression . '+' expression
  129           | expression . '-' expression
  136 function_call_variables: expression .

    '/'  shift, and go to state 130
    '*'  shift, and go to state 131
    '+'  shift, and go to state 132
    '-'  shift, and go to state 133

    $default  reduce using rule 136 (function_call_variables)


State 105

   72 function_calling_newline: STRING '(' function_call_variables . ')' N
  137 function_call_variables: function_call_variables . ',' expression
  139                        | function_call_variables . ',' POINTER STRING

    ')'  shift, and go to state 149
    ','  shift, and go to state 150


State 106

   41 array_initialisation: STRING '[' expression . ']' '=' expression
  126 expression: expression . '/' expression
  127           | expression . '*' expression
  128           | expression . '+' expression
  129           | expression . '-' expression

    '/'  shift, and go to state 130
    '*'  shift, and go to state 131
    '+'  shift, and go to state 132
    '-'  shift, and go to state 133
    ']'  shift, and go to state 151


State 107

  115 assignment_statement: STRING '=' NULL1 .

    $default  reduce using rule 115 (assignment_statement)


State 108

   73 function_calling_newline: STRING '=' STRING . '(' function_call_variables ')' ';'
  131 variable_or_value_or_function_call: STRING .
  132                                   | STRING . '[' VALUE ']'
  133                                   | STRING . '[' STRING ']'
  135                                   | STRING . '(' function_call_variables ')'

    '('  shift, and go to state 152
    '['  shift, and go to state 95

    $default  reduce using rule 131 (variable_or_value_or_function_call)


State 109

  114 assignment_statement: STRING '=' '#' . quote '#'

    $default  reduce using rule 111 (quote)

    quote  go to state 153


State 110

  112 assignment_statement: STRING '=' expression .
  126 expression: expression . '/' expression
  127           | expression . '*' expression
  128           | expression . '+' expression
  129           | expression . '-' expression

    '/'  shift, and go to state 130
    '*'  shift, and go to state 131
    '+'  shift, and go to state 132
    '-'  shift, and go to state 133

    $default  reduce using rule 112 (assignment_statement)


State 111

   39 array_declaration_recursive: STRING '[' . expression ']'

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99

    expression                          go to state 154
    variable_or_value_or_function_call  go to state 87


State 112

  123 declaration_assignment_expression: STRING '=' . expression
  124                                  | STRING '=' . '#' quote '#'

    STRING  shift, and go to state 59
    VALUE   shift, and go to state 60
    '('     shift, and go to state 99
    '#'     shift, and go to state 155

    expression                          go to state 156
    variable_or_value_or_function_call  go to state 87


State 113

   40 array_declaration_recursive: array_declaration_recursive ',' . STRING '[' expression ']'

    STRING  shift, and go to state 157


State 114

  120 declaration_expression: declaration_expression ',' . STRING
  122                       | declaration_expression ',' . declaration_assignment_expression

    STRING  shift, and go to state 158

    declaration_assignment_expression  go to state 159
